--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:powderblue;">
+<head>
+    <meta charset="utf-8" />
+    <title>MrDrHax main page</title>
+    <style>
+    	* { padding: 0; margin: 0; }
+    	canvas { background: #eee; display: block; margin: 0 auto; }
+    </style>
+</head>
+<body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<canvas id="canvas"></canvas>
+
+<script src="main.js"></script>
 
 </body>
 </html>
