--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Gugi' rel='stylesheet'>
     <meta charset="utf-8" />
     <title>MrDrHax main page</title>
     <style>
@@ -11,7 +12,7 @@
 <body>
 
 <canvas id="canvas"></canvas>
-
+<script type="text/javascript" src="JSON.js"></script>
 <script src="main.js"></script>
 
 </body>
