made it look pretty

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link href='https://fonts.googleapis.com/css?family=Gugi' rel='stylesheet'>
     <meta charset="utf-8" />
     <title>MrDrHax main page</title>
+    <meta name="description" content="A webpage I made in JS to showcase my projects. I will try to keep it as updated as I can." />
+    <link rel="icon" href="favicon.ico">
     <style>
     	* { padding: 0; margin: 0; }
     	canvas { background: #eee; display: block; margin: 0 auto; }
