--- a/about me.html
+++ b/about me.html
@@ -6,6 +6,15 @@
 -->
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-9YLQQNT6P2"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-9YLQQNT6P2');
+		</script>
 		<title>MrDrHax | Me</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Get to know me! This webpage showcases my projects and what i've done, enjoy your stay!"/>
