--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 			gtag('config', 'G-9YLQQNT6P2');
 		</script>
-		<title>MrDrHax | About me</title>
+		<title>MrDrHax | Home</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Get to know me! This webpage showcases my projects and what i've done, enjoy your stay!"/>
     	<link rel="icon" href="favicon.ico">
