--- a/projects.html
+++ b/projects.html
@@ -5,113 +5,145 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-9YLQQNT6P2"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
 
-			gtag('config', 'G-9YLQQNT6P2');
-		</script>
-		<title>MrDrHax | Projects</title>
-		<meta charset="utf-8" />
-		<meta name="description" content="Get to know me! This webpage showcases my projects and what i've done, enjoy your stay!"/>
-    	<link rel="icon" href="favicon.ico">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="subpage">
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9YLQQNT6P2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="logo">Alex</a>
-					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="about me.html">Who I am</a>
-						<a href="projects.html">Projects</a>
-					</nav>
-					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+		gtag('config', 'G-9YLQQNT6P2');
+	</script>
+	<title>MrDrHax | Projects</title>
+	<meta charset="utf-8" />
+	<meta name="description"
+		content="Get to know me! This webpage showcases my projects and what i've done, enjoy your stay!" />
+	<link rel="icon" href="favicon.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body class="subpage">
+
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="index.html" class="logo">Alex</a>
+			<nav id="nav">
+				<a href="index.html">Home</a>
+				<a href="about me.html">Who I am</a>
+				<a href="projects.html">Projects</a>
+			</nav>
+			<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+		</div>
+	</header>
+
+	<!-- Intro -->
+
+	<section id="main" class="wrapper">
+		<div class="inner">
+			<h1>A list of my featured projects!</h1>
+			<p>I made them with extra love.</p>
+
+			<p>Check my <a href="https://github.com/MrDrHax">github</a> for the full list!</p>
+
+			<!-- content -->
+
+
+			<div class="project">
+				<img src="images/fast-automata.png" alt="img">
+				<h1>Fast automata</h1>
+				<p>Automata simulator built on c++ for python</p>
+				<a href="https://github.com/MrDrHax/fast-automata" class="button">More</a>
+			</div>
+
+			<div class="project">
+				<img src="images/biciland.png" alt="img">
+				<h1>Bike traffic sim</h1>
+				<p>Automata simulated traffic using fast-automata and unity.</p>
+				<a href="https://github.com/MrDrHax/alexgrafica2" class="button">More</a>
+			</div>
+
+			<div class="project">
+				<h1>Bottle caps sorter using vision</h1>
+				<p>
+					This project was made in collaboration with a team of mechatronics engineers.
+					It uses a raspberry pi and a camera to sort bottle caps by color.
+				</p>
+				<a href="https://github.com/MrDrHax/visionForBottleCaps" class="button">More</a>
+			</div>
+
+			<div class="project">
+				<img src="images/pic02.jpg" alt="img">
+				<h1>My 'learn to code' project!</h1>
+				<p>A learn to code in python project, it teaches everything in a simmilar way to swift playgrounds</p>
+				<a href="https://mrdrhax.github.io/Learning-to-code-in-Python" class="button">More</a>
+			</div>
+
+			<div class="project">
+				<img src="images/Volcano.png" alt="img">
+				<h1>Volcano simulation</h1>
+				<p>A web based app made in python to simulate volcanic activity!</p>
+				<a href="https://github.com/MrDrHax/modelacionVolcanica" class="button">More</a>
+			</div>
+
+			<div class="project">
+				<img src="images/pic01.jpg" alt="img">
+				<h1>Drunk Chess (developing)</h1>
+				<p>A game made in unity, made to give chess a new concept, and practically unlimited players.</p>
+				<a href="#" class="button">WIP</a>
+			</div>
+
+			<div class="project">
+				<img src="images/AztecRush.jpg" alt="img">
+				<h1>Aztec rush</h1>
+				<p>A game made in unity, with a week to finish it.</p>
+				<a href="https://play.google.com/store/apps/details?id=com.AlexLabs.AztecRush&hl=en_US"
+					class="button">More</a>
+			</div>
+
+			<div class="project">
+				<img src="images/Simon.png" alt="img">
+				<h1>Simon (colab)</h1>
+				<p>The pretty well known simon game, made in pyglet, as a project for school</p>
+				<a href="https://mrdrhax.github.io/simon-game/" class="button">More</a>
+			</div>
+
+			<div class="project">
+				<img src="images/Grizz.png" alt="img">
+				<h1>grizzhacks hakathon (colab)</h1>
+				<p>This was a project developed in flask, as part of a hackathon!</p>
+				<a href="https://github.com/JorgePerC/GrizzHacks" class="button">More</a>
+			</div>
+
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<div class="flex">
+				<div class="copyright">
+					&copy; Alex labs. Design: <a href="https://templated.co">TEMPLATED</a>.</a>.
 				</div>
-			</header>
+				<ul class="icons">
+					<li><a href="https://github.com/MrDrHax" class="icon fa-github"><span
+								class="label">Facebook</span></a></li>
+					<li><a href="https://www.linkedin.com/in/alex-fernandez-485793198/" class="icon fa-linkedin"><span
+								class="label">linkedIn</span></a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 
-		<!-- Intro -->
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-			<section id="main" class="wrapper">
-				<div class="inner">
-					<p>(WIP)</p>
-					<h1>A list of all my projects!</h1>
-					<p>I made them with love.</p>
-					
-					<!-- content -->
+</body>
 
-					<div class="project">
-						<img src="images/pic02.jpg" alt="img">
-						<h1>My 'learn to code' project!</h1>
-						<p>A learn to code in python project, it teaches everything in a simmilar way to swift playgrounds</p>
-						<a href="https://mrdrhax.github.io/Learning-to-code-in-Python" class="button">More</a>
-					</div>
-
-					<div class="project">
-						<img src="images/Volcano.png" alt="img">
-						<h1>Volcano simulation</h1>
-						<p>A web based app made in python to simulate volcanic activity!</p>
-						<a href="https://github.com/MrDrHax/modelacionVolcanica" class="button">More</a>
-					</div>
-
-					<div class="project">
-						<img src="images/pic01.jpg" alt="img">
-						<h1>Drunk Chess (developing)</h1>
-						<p>A game made in unity, made to give chess a new concept, and practically unlimited players.</p>
-						<a href="#" class="button">WIP</a>
-					</div>
-
-					<div class="project">
-						<img src="images/AztecRush.jpg" alt="img">
-						<h1>Aztec rush</h1>
-						<p>A game made in unity, with a week to finish it.</p>
-						<a href="https://play.google.com/store/apps/details?id=com.AlexLabs.AztecRush&hl=en_US" class="button">More</a>
-					</div>
-
-					<div class="project">
-						<img src="images/Simon.png" alt="img">
-						<h1>Simon (colab)</h1>
-						<p>The pretty well known simon game, made in pyglet, as a project for school</p>
-						<a href="https://mrdrhax.github.io/simon-game/" class="button">More</a>
-					</div>
-
-					<div class="project">
-						<img src="images/Grizz.png" alt="img">
-						<h1>grizzhacks hakathon (colab)</h1>
-						<p>This was a project developed in flask, as part of a hackathon!</p>
-						<a href="https://github.com/JorgePerC/GrizzHacks" class="button">More</a>
-					</div>
-
-				</div>
-			</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="flex">
-						<div class="copyright">
-							&copy; Alex labs. Design: <a href="https://templated.co">TEMPLATED</a>.</a>.
-						</div>
-						<ul class="icons">
-							<li><a href="https://github.com/MrDrHax" class="icon fa-github"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.linkedin.com/in/alex-fernandez-485793198/" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
-						</ul>
-					</div>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
 </html>
